<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="16dp"
            android:layout_toEndOf="@+id/img_item_photo">
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/item_title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textSize="14sp"
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    tools:text="@string/score"
                    android:textColor="@color/color_primary_dark"/>
                <RatingBar
                    android:layout_toEndOf="@+id/tv_score"
                    android:id="@+id/rating_cake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5"
                    android:gravity="center_vertical"/>
            </LinearLayout>
            <TextView
                android:textSize="14sp"
                android:id="@+id/tv_item_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="2dp"
                android:layout_below="@id/tv_item_name"
                android:ellipsize="end"
                android:maxLines="5"
                tools:text="@string/detail" />
        </LinearLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>